  * French translation update.

  [ James McCoy ]
  * Update tools to uniformly handle the supported compression types for
    source packages.  (Closes: #650118)
  * uscan:
    + Use "gzip -n" when repacking zip files.  Thanks to Franz Schrober for
      the patch.  (Closes: #646691)
    + Handle filenames with special characters.  (Closes: #648299)

 -- David Prévot <taffit@debian.org>  Sat, 03 Dec 2011 11:39:52 -0400

devscripts (2.11.2) unstable; urgency=low

  [ Gerfried Fuchs ]
  * Remove the word "of" from the BSD 3 clause check, it might not be in
    there.

  [ James McCoy ]
  * Remove support for PGP-style commands from debsign/debrsign.  (Closes:
    #639204)
    + DEBSIGN_SIGNLIKE config variable removed
  * Update scripts to use GNU getopt-compatible option parsing. (Closes:
    #641979)
    + For Perl scripts, use Getopt::Long's "gnu_compat" and "bundling" modes.
      When allowed, also use "permute" for full GNU getopt compatibility.
    + For shell scripts, use getopt instead of manual option parsing.
      - Update uses of getopt to show usage when getopt fails.
  * licensecheck:
    + Recognize more generated files, MIT/X11 variants, Microsoft Permissive
      License (Ms-PL), and a libpng variant.  Thanks to Paweł Hajdan, Jr for
      the patches.  (Closes: #641497, #647524, #647526, #647527)
  * debchange: Document that only `$1' backreference replacements are
    supported.  Thanks to Matthijs Kooijman for the patch.  (Closes: #639813)
  * mergechanges: Use awk instead of sed to handle massaging the final output
    so we can better control the processing.  (Closes: #640782)
  * uscan: Fully support lzma and xz tarballs.  Based on a patch from Tanguy
    Ortolo.  (Closes: #631713)
  * debi: Document --multi, --with-depends, and --tool in the man page.
    (Closes: #644983)
  * dd-list:
    + Correctly handle maintainer names which have a comma.  (Closes: #646562)
    + Sort results by full-name instead of trying to parse the names.